--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 20
     buildToolsVersion '20.0.0'
 
+    packagingOptions {
+        exclude 'com/sun/syndication/rope.properties'
+    }
+
     defaultConfig {
         applicationId "com.cleancoder.interviews.rssreader"
         minSdkVersion 8
@@ -22,8 +26,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.+'
-    compile files('libs/rome-1.0.jar')
-    compile files('libs/rome-1.0-javadoc.jar')
-    compile files('libs/rome-1.0-sources.jar')
     compile project(':cleancoderLib')
+    compile project(':rssReaderLib')
 }
