--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".RssFeedsActivity"
+            android:launchMode="singleTop"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +21,20 @@
         </activity>
         <activity
             android:name=".RssItemsActivity"
-            android:label="@string/title_activity_rss_feed_items"
-            android:parentActivityName=".MainActivity" >
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_rss_items"
+            android:parentActivityName=".RssFeedsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cleancoder.interviews.rssreader.MainActivity" />
+        </activity>
+        <activity
+            android:name=".RssItemActivity"
+            android:label="@string/title_activity_rss_item"
+            android:parentActivityName=".RssItemsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cleancoder.interviews.rssreader.RssItemsActivity" />
         </activity>
     </application>
 
